[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-retry-policy-py"
version = "0.1.0"
description = "Composable retry policies with backoff for LLM/agent calls"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "retry", "backoff", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-asyncio>=0.21"]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-retry-policy-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "asyncio: mark a test as an asyncio coroutine (handled by pytest-asyncio)",
]
